# recipe-recommendation

./: .env.sample  .gitignore  .tool-versions  Dockerfile  Dockerfile-gpu  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-core.txt  requirements-gpu.txt  requirements.txt  setup.py  tox.ini
.devcontainer/: devcontainer-cpu.json  devcontainer.json
.devcontainer/features/shell/: devcontainer-feature.json  install.sh
.github/workflows/: docker-image.yaml  pages-deployment.yaml
data/: .gitignore  fastRP_embed.gsql  schema.gsql
data/test/: RAW_interactions.csv  RAW_recipes.csv  interactions.csv  recipes.csv
models/: .gitignore  embedding_rec.gsql  pearson_corr.gsql
notebooks/: 230112-nickthegroot-data-explore.ipynb  230117-nickthegroot-graph-build.ipynb  230217-nickthegroot-graph-build.ipynb  230219-nickthegroot-model-eval.ipynb  230301-nickthegroot-eval-metrics.ipynb
recipe_recommendation/data/: clean_recipes.py  make_dataset.py  sync_dataset.py
recipe_recommendation/data/tests/: test_make_dataset.py
reports/: .gitignore  citations.bib  poster.tex  proposal.tex  report.tex
reports/common/: neurips_2022.sty  ucsdreport.cls
src/: config.py
src/cli/: make_dataset.py  sync_dataset.py  train.py
src/data/: clean_interactions.py  clean_recipes.py  get_data.py  make_dataset.py  sync_dataset.py
src/data/tests/: test_make_dataset.py
src/models/: conv.py  graphsage.py  heterolgn.py  lightgcn.py  loader.py  metrics.py  recgcn.py  reclcn.py  train.py
src/models/lightgcn/: loader.py  model.py  train.py
src/tests/: test_full_pipeline.py  test_make_dataset.py
website/: README.md  docusaurus.config.js  package.json  types.d.ts
website/docs/: 1-intro.md  2-data.md  4-future-work.md  4-results.md  5-conclusion-and-future-work.md
website/docs/3-Models/: 2-lightgcn.md  3-recgcn.md
website/docs/3-models/: 1-collaborative-filtering.md  2-lightgcn.md  3-recgcn.md  index.md
website/docs/installation/: index.md
website/src/components/: HomescreenContainer.tsx
website/src/components/HomepageProblems/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
website/static/: figures
website/ux/: 1-user-research.md  2-early-ideation.md  3-prototypes.md  4-final-design.md  5-conclusion.md  index.md
