[tool.poetry]
name = "recipe_recommendation"
version = "0.1.0"
description = "The recommendation engine for home-cooked recipes"
authors = ["Nick DeGroot <ndegroot@ucsd.edu>"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
pandas = "^1.5.2"
torch = "^1.13.0"
pyg-lib = "^0.1.0+pt113cu117"
torch-scatter = "^2.1.0+pt113cu117"
torch-sparse = "^0.6.15+pt113cu117"
torch-cluster = "^1.6.0+pt113cu117"
torch-spline-conv = "^1.2.1+pt113cu117"
torch-geometric = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
docstr-coverage = "*"
flake8 = "*"
flake8-docstrings = "*"
ipython = "*"
isort = "*"
jupyter = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
tqdm = "^4.64.1"


[[tool.poetry.source]]
name = "PyG"
url = "https://data.pyg.org/whl/torch-1.13.0+cu117.html"
default = false
secondary = false

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
src_paths = ["recipe_recommendation", "tests"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
