[tool.poetry]
name = "recipe_recommendation"
version = "0.1.0"
description = "The recommendation engine for home-cooked recipes"
authors = ["Nick DeGroot <ndegroot@ucsd.edu>"]

[tool.poetry.scripts]
make_dataset = "recipe_recommendation.data.make_dataset:main"
sync_dataset = "recipe_recommendation.data.sync_dataset:main"

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^1.5.2"
matplotlib = "^3.6.3"
pytigergraph = { extras = ["gds"], version = "^1.3" }
python-dotenv = "^0.21.0"
numpy = "^1.24.2"
click = "^8.1.3"
pyarrow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
docstr-coverage = "*"
flake8 = "*"
flake8-docstrings = "*"
ipython = "*"
isort = "*"
jupyter = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
tqdm = "^4.64.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
src_paths = ["recipe_recommendation", "tests"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
